<resources>
    <string name="app_name">Medic1</string>
    <string name="registrarme_como">Registrarme como:</string>
    <string name="paciente">Paciente</string>
    <string name="medico">Médico</string>
    <string name="secretaria">Secretaria</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="crear_cuenta_Medic">Crear cuenta Medic</string>
    <string name="olvide_mi_cuenta">Olvidé mi contraseña</string>
    <string name="registro_paciente">Registro Paciente</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="confirmacion_contrasena">Confirmación de contraseña</string>
    <string name="celular">Celular</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="registrar">Registrar</string>
    <string name="registro_medico">Registro Médico</string>
    <string name="registro_secretaria">Registro Secretaría</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
    <string name="cedula">N°Identificación</string>
    <string name="enviar">Enviar</string>
    <string name="agendar_cita">Agenda tú cita</string>
    <string name="historial_citas">Historial de citas</string>
    <string name="resutados">Resultados</string>
    <string name="resutadopaciente">Resultados Nombre Paciente</string>
    <string name="resutadosmedico">Resultados Nombre Médico</string>
    <string name="ubicacion">Ubicación</string>
    <string name="contactos">Contactos</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="consultorio">Consultorio</string>
    <string name="estado">Estado</string>
    <string name="valor">Valor</string>
    <string name="examen">Examen</string>
    <string name="ver">Ver</string>
    <string name="tipo">Tipo</string>
    <string name="citasmedico">Citas Nombre Médico</string>
    <string name="medicos">Médicos</string>
    <string name="descripcion">Descripción</string>
    <string name="detalles">Contacto Pricipal</string>
    <string name="sedeprincipal">Dirección</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="descripcion_mapa">Mapa interactivo de ubicación</string>


    <string name="ver_medicos">Ver medico</string>


</resources>